Añadido el formulario para edición de datos de usuario en las películas

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+        "@components/*": ["components/*"],
+        "@services/*": ["services/*"],
+        "@types/*": ["types/*"],
+        "@utils/*": ["utils/*"]
+    },
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
