--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js",
+    "start": "cross-env NODE_ENV=production node src/index.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "populateCountries": "node scripts/populateCountries.js",
     "populateMovies": "node scripts/populateMovies.js",
-    "checkConnection": "node scripts/checkConnection.js"
+    "checkConnection": "node scripts/checkConnection.js",
+    "migration": "src/database/migrations"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +22,14 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.9"
   }
 }
